# sro_extensions

./: .clang-format  .gitignore  4N[2026-06-20 21-16-41]_47_65 AMINIYALIMM_bitwise.dmp  CMakePresets.json  build.bat  compile_commands.json  disasm_286E0.py  dump_analysis.txt  parse_dump.py  sro_extensions.code-workspace
cmake/: FindDirectX.cmake  (+1 more)
sro_ext_client/: .clang-format  .clangd  CMakeLists.txt  build.bat  build_errors.txt  build_errors2.txt  build_errors3.txt
sro_ext_client/.cursor/rules/: sro-color.mdc  sro-ui-res-maps.mdc
sro_ext_client/cmake/: normalize_compile_commands.cmake  toolchain.cmake
sro_ext_client/ext_client/: CMakeLists.txt
sro_ext_client/ext_client/config/: client_config.cpp
sro_ext_client/ext_client/core/: dllmain.cpp  ext_client.cpp  ext_client.hpp
sro_ext_client/ext_client/d3dx/: vectorf.cpp  vectorf.inl
sro_ext_client/ext_client/hooks/: d3d_hook.cpp  title_hook.hpp  version_check_hook.cpp  version_check_hook.hpp
sro_ext_client/ext_client/menu/: config_panel.cpp  config_panel.hpp  interface_analyzer.cpp  menu.hpp  widget_inspector.cpp
sro_ext_client/ext_client/sdk/: calarm_guide_mgr_wnd.cpp  calarm_store.hpp  cclient_net.cpp  cclient_net.hpp  cd3d_application.cpp  cgame_text.hpp  cgfx_video3d.hpp  cgwnd.cpp  cic_deco_character.hpp  cif_edit.hpp  cif_manager.cpp  cif_notify.hpp  cif_static.hpp  cnet_process.hpp  cprocess.hpp  cps_character_select.cpp  cps_title.cpp  cps_title.hpp  cps_version_check.cpp  cps_version_check.hpp  game_state.cpp  net_manager.cpp  net_manager.hpp  net_msg.hpp  sro_hierarchy.hpp  sworld.cpp  sworld.hpp
sro_ext_client/ext_client/utils/: hooks.hpp  log.hpp  process.cpp  process.hpp  shutdown_guard.cpp  shutdown_guard.hpp  string.cpp  window_style.cpp
sro_ext_client/src/: CMakeLists.txt  dllmain.cpp  ext_client.cpp  ext_client.hpp
sro_ext_client/src/config/: client_config.cpp  client_config.hpp
sro_ext_client/src/core/: core_config.cpp  core_config.hpp  core_event_manager.cpp  core_event_manager.hpp  core_hooks.cpp  core_hooks.hpp  core_main.cpp  core_main.hpp  core_plugin_manager.cpp  core_plugin_manager.hpp
sro_ext_client/src/hooks/: bslib_hook.cpp  bslib_hook.hpp  cif_notify_hook.cpp  cif_notify_hook.hpp  cif_target_window_hook.cpp  cif_target_window_hook.hpp  cnif_sro_ingame_start_hook.cpp  cnif_sro_ingame_start_hook.hpp  cps_character_select_hook.cpp  cps_character_select_hook.hpp  cps_quit_hook.cpp  cps_quit_hook.hpp  cps_title_hook.cpp  cps_title_hook.hpp  cps_title_login_layout.cpp  cps_title_login_layout.hpp  cps_version_check_hook.cpp  cps_version_check_hook.hpp  d3d_hook.cpp  d3d_hook.hpp  exit_hooks.cpp  exit_hooks.hpp  hook_manager.cpp  hook_manager.hpp  interface_hide_hook.cpp  interface_hide_hook.hpp  interface_manager_runtime.cpp  interface_manager_runtime.hpp  intro_hook.cpp  loading_splash_overlay.cpp  net_hook.cpp  net_hook.hpp  packet_hook.cpp  packet_hook.hpp  quest_hook.cpp  sight_range_hook.cpp  target_window_hook.cpp  target_window_hook.hpp  title_hook.cpp  title_hook.hpp  (+6 more)
sro_ext_client/src/menu/: debug_profiler.cpp  debug_profiler.hpp  interface_manager.cpp  interface_manager.hpp  interface_manager_runtime.cpp  interface_manager_runtime.hpp  menu.cpp  menu.hpp  menu_shell.cpp  menu_shell.hpp  menu_theme.cpp  menu_theme.hpp  menu_tools.cpp  menu_tools.hpp  menu_ui.cpp  menu_ui.hpp  packet_decoder.cpp  packet_decoder.hpp  packet_inspector.cpp  packet_inspector.hpp  settings_advanced.cpp  settings_advanced.hpp  settings_app.cpp  settings_app.hpp  settings_combat.cpp  settings_combat.hpp  settings_graphics.cpp  settings_graphics.hpp  settings_interface.cpp  settings_interface.hpp  settings_login.cpp  settings_login.hpp  settings_panels.cpp  settings_panels.hpp  settings_version_check.cpp  settings_version_check.hpp  settings_welcome.cpp  settings_welcome.hpp  ui_browser_common.cpp  ui_browser_common.hpp  (+1 more)
sro_ext_client/src/plugins/: assert_plugin.cpp  assert_plugin.hpp  character_select_plugin.cpp  character_select_plugin.hpp  hud_customizer_plugin.cpp  hud_customizer_plugin.hpp  net_log_plugin.cpp  net_log_plugin.hpp  quest_plugin.cpp  quest_plugin.hpp  target_window_plugin.cpp  target_window_plugin.hpp  title_plugin.cpp  title_plugin.hpp  version_check_plugin.cpp  version_check_plugin.hpp  welcome_msg_plugin.cpp  welcome_msg_plugin.hpp
sro_ext_client/src/render/: d3d_hooks.cpp  d3d_hooks.hpp  imgui_renderer.cpp  imgui_renderer.hpp  input_handler.cpp  input_handler.hpp  loading_splash_overlay.cpp  loading_splash_overlay.hpp  render_system.cpp  render_system.hpp
sro_ext_client/src/sdk/: calarm_data.hpp  calarm_entry.hpp  calarm_guide_mgr_wnd.cpp  calarm_guide_mgr_wnd.hpp  calarm_store.hpp  calram_guide_mgr_wnd.cpp  calram_guide_mgr_wnd.hpp  cclient_config.hpp  cclient_net.hpp  ccontroler.cpp  ccontroler.hpp  cd3d_application.hpp  centity_manager.cpp  centity_manager.hpp  centity_manager_client.cpp  centity_manager_client.hpp  cg_interface.cpp  cg_interface.hpp  cgfx_video3d.hpp  cgwnd.cpp  cgwnd.hpp  cgwnd_base.hpp  cic_deco_character.cpp  cic_script_obj.cpp  cic_script_obj.hpp  cicharactor.cpp  cicharactor.hpp  cicplayer.cpp  cicplayer.hpp  cif_alarms.hpp  cif_button.hpp  cif_decorated_static.hpp  cif_edit.hpp  cif_main_popup.cpp  cif_main_popup.hpp  cif_manager.cpp  cif_manager.hpp  cif_notify.cpp  cif_notify.hpp  cif_static.cpp  (+50 more)
sro_ext_client/src/utils/: client_config.cpp  client_config.hpp  hooks.cpp  hooks.hpp  imgui_helpers.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  msvc9_stl.cpp  msvc9_stl.hpp  offsets.hpp  process.cpp  process.hpp  process_manager.hpp  rtti.cpp  rtti.hpp  shutdown_guard.cpp  shutdown_guard.hpp  sight_range_math.hpp  string.cpp  string.hpp  tick_throttle.hpp  ui_res_catalog.cpp  vectorf.cpp  vectorf.h  window_style.hpp  x86_lde.cpp  x86_lde.hpp
sro_ext_client/tools/res_ui/: open_market_1_1.2dt
sro_ext_client/version_proxy/: CMakeLists.txt  version.cpp
tools/SroWorldEditor/: CMakeLists.txt  build.bat  diff_mesh_renderer.txt  tmp_inspect_fire.py  tmp_nonsn.json  tmp_orig_mr.cpp  tmp_probe_fire_ddj.py  tmp_scan_bsr.py  tmp_textdata_scan.json
(+412 files in other folders)
